Change the information of index.html.

--- a/apache-tomcat-8.5.29/webapps/f9241/index.html
+++ b/apache-tomcat-8.5.29/webapps/f9241/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Authentication Signup Form Flat Responsive widget Template :: 小贝壳网站模板</title>
+<title>MOOCStatistic</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Validation Signup Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
@@ -57,7 +57,7 @@
 			</div>
 		</form>
     </div>
-<p class="copyright-w3ls">© 2017 Authentication Signup Form. All Rights Reserved | Design by <a href="http://www.smallseashell.com/" target="_blank">小贝壳网站模板</a></p>
+<p class="copyright-w3ls">© 2018 Authentication Signup Form. All Rights Reserved | Design by <a href="http://www.smallseashell.com/" target="_blank">卓教授</a></p>
 <!-- js files -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
