Add mysql-connector-java in tomcat lib.

--- a/apache-tomcat-8.5.29/webapps/f9241/index.html
+++ b/apache-tomcat-8.5.29/webapps/f9241/index.html
@@ -16,7 +16,7 @@
 <!-- /css -->
 </head>
 <body>
-<h1 class="w3ls">Authentication Signup Form</h1>
+<h1 class="w3ls">Authentication Signup</h1>
 	<div class="content-agileits">
 		<form action="#" method="post" data-toggle="validator" role="form">
 			<div class="form-group 小贝壳网站模板 w3 w3l">
