--- a/apache-tomcat-8.5.29/webapps/signon/index.html
+++ b/apache-tomcat-8.5.29/webapps/signon/index.html
@@ -16,48 +16,29 @@
 <!-- /css -->
 </head>
 <body>
-<h1 class="w3ls">Authentication Signup</h1>
+<h1 class="w3ls">Authentication Signon</h1>
 	<div class="content-agileits">
 		<form action="#" method="post" data-toggle="validator" role="form">
-			<div class="form-group 小贝壳网站模板 w3 w3l">
-				<label for="firstname" class="control-label">First Name</label>
-				<input type="text" class="form-control" id="firstname" placeholder="First Name" data-error="Enter Your First Name" required>
-				<div class="help-block with-errors"></div>
-			</div>
-			<div class="form-group agileits 小贝壳网站模板 w3">
-				<label for="lastname" class="control-label">Last Name</label>
-				<input type="text" class="form-control" id="lastname" placeholder="Last Name" data-error="Enter Your Last Name" required>
-				<div class="help-block with-errors"></div>
-			</div>
 			<div class="form-group w3l agileinfo wthree w3-agileits">
 				<label for="inputEmail" class="control-label">Email</label>
 				<input type="email" class="form-control" id="inputEmail" placeholder="Email" data-error="This email address is invalid" required>
 				<div class="help-block with-errors"></div>
 			</div>
-			<div class="form-group agileinfo wthree w3-agileits agile">
+			<!-- <div class="form-group agileinfo wthree w3-agileits agile">
 				<label for="Phone" class="control-label">Phone</label>
 				<input type="text" class="form-control" id="Phone" placeholder="Phone" data-error="Enter Your Phone Number" required>
 				<div class="help-block with-errors"></div>
-			</div>
-			<div class="form-group agile agileits-小贝壳网站模板 w3-agile">
-				<label for="inputPassword" class="control-label">Password</label>
-				<div class="form-inline row">
-					<div class="form-group col-sm-6 agileits-小贝壳网站模板">
-						<input type="password" data-minlength="6" class="form-control" id="inputPassword" placeholder="Password" required>
-						<div class="help-block">Minimum of 6 characters</div>
-					</div>
-					<div class="form-group col-sm-6 w3-agile">
-						<input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Confirm Password" required>
-						<div class="help-block with-errors"></div>
-					</div>
-				</div>
+			</div> -->
+			<div class="form-group col-sm-6 w3-agile">
+				<input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Confirm Password" required>
+				<div class="help-block with-errors"></div>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-lg">Submit</button>
+				<button type="submit" class="btn btn-lg">Signon</button>
 			</div>
 		</form>
     </div>
-<p class="copyright-w3ls">© 2018 Authentication Signup. All Rights Reserved | Design by <a href="http://www.smallseashell.com/" target="_blank">卓教授</a></p>
+<p class="copyright-w3ls">© 2018 Authentication Signon. All Rights Reserved | Design by <a href="http://www.smallseashell.com/" target="_blank">卓教授</a></p>
 <!-- js files -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
