--- a/apache-tomcat-8.5.29/webapps/signon/index.html
+++ b/apache-tomcat-8.5.29/webapps/signon/index.html
@@ -20,7 +20,7 @@
 	<div class="content-agileits">
 		<form action="#" method="post" data-toggle="validator" role="form">
 			<div class="form-group w3l agileinfo wthree w3-agileits">
-				<label for="inputEmail" class="control-label">Email</label>
+				<label for="inputEmail" class="control-label">Username</label>
 				<input type="email" class="form-control" id="inputEmail" placeholder="Email" data-error="This email address is invalid" required>
 				<div class="help-block with-errors"></div>
 			</div>
@@ -29,8 +29,9 @@
 				<input type="text" class="form-control" id="Phone" placeholder="Phone" data-error="Enter Your Phone Number" required>
 				<div class="help-block with-errors"></div>
 			</div> -->
-			<div class="form-group col-sm-6 w3-agile">
-				<input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Confirm Password" required>
+			<div class="form-group w3l agileinfo wthree w3-agileits">
+				<label for="inputEmail" class="control-label">Password</label>
+				<input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Password" required>
 				<div class="help-block with-errors"></div>
 			</div>
 			<div class="form-group">
