Change the context in signon's index.html.

--- a/apache-tomcat-8.5.29/webapps/signup/index.html
+++ b/apache-tomcat-8.5.29/webapps/signup/index.html
@@ -19,12 +19,12 @@
 <h1 class="w3ls">Authentication Signup</h1>
 	<div class="content-agileits">
 		<form action="#" method="post" data-toggle="validator" role="form">
-			<div class="form-group 小贝壳网站模板 w3 w3l">
+			<div class="form-group w3 w3l">
 				<label for="firstname" class="control-label">First Name</label>
 				<input type="text" class="form-control" id="firstname" placeholder="First Name" data-error="Enter Your First Name" required>
 				<div class="help-block with-errors"></div>
 			</div>
-			<div class="form-group agileits 小贝壳网站模板 w3">
+			<div class="form-group agileits w3">
 				<label for="lastname" class="control-label">Last Name</label>
 				<input type="text" class="form-control" id="lastname" placeholder="Last Name" data-error="Enter Your Last Name" required>
 				<div class="help-block with-errors"></div>
@@ -39,10 +39,10 @@
 				<input type="text" class="form-control" id="Phone" placeholder="Phone" data-error="Enter Your Phone Number" required>
 				<div class="help-block with-errors"></div>
 			</div>
-			<div class="form-group agile agileits-小贝壳网站模板 w3-agile">
+			<div class="form-group agile agileits w3-agile">
 				<label for="inputPassword" class="control-label">Password</label>
 				<div class="form-inline row">
-					<div class="form-group col-sm-6 agileits-小贝壳网站模板">
+					<div class="form-group col-sm-6 agileits">
 						<input type="password" data-minlength="6" class="form-control" id="inputPassword" placeholder="Password" required>
 						<div class="help-block">Minimum of 6 characters</div>
 					</div>
@@ -57,7 +57,7 @@
 			</div>
 		</form>
     </div>
-<p class="copyright-w3ls">© 2018 Authentication Signup. All Rights Reserved | Design by <a href="http://www.smallseashell.com/" target="_blank">卓教授</a></p>
+<p class="copyright-w3ls">© 2018 Authentication Signup. All Rights Reserved | Design by <a href="http://0lddriv3r.github.io" target="_blank">卓教授</a></p>
 <!-- js files -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
