--- a/apache-tomcat-8.5.29/webapps/signon/index.html
+++ b/apache-tomcat-8.5.29/webapps/signon/index.html
@@ -31,7 +31,7 @@
 			</div> -->
 			<div class="form-group w3l agileinfo wthree w3-agileits">
 				<label for="inputEmail" class="control-label">Password</label>
-				<input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Password" required>
+				<input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Password don't match" placeholder="Password" required>
 				<div class="help-block with-errors"></div>
 			</div>
 			<div class="form-group">
@@ -39,7 +39,7 @@
 			</div>
 		</form>
     </div>
-<p class="copyright-w3ls">© 2018 Authentication Signon. All Rights Reserved | Design by <a href="http://www.smallseashell.com/" target="_blank">卓教授</a></p>
+<p class="copyright-w3ls">© 2018 Authentication Signon. All Rights Reserved | Design by <a href="http://0lddriv3r.github.io" target="_blank">卓教授</a></p>
 <!-- js files -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
