--- a/apache-tomcat-8.5.29/webapps/datadisplay/graphs.html
+++ b/apache-tomcat-8.5.29/webapps/datadisplay/graphs.html
@@ -365,7 +365,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 	</script>
 	<div class="copy_layout">
-         <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://www.smallseashell.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+         <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://0lddriv3r.github.io/">卓教授</a></p>
         </div>	
    </div>
       </div>
