--- a/apache-tomcat-8.5.29/webapps/datadisplay/register.html
+++ b/apache-tomcat-8.5.29/webapps/datadisplay/register.html
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
   </form>
    <div class="copy_layout login register">
-      <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://0lddriv3r.github.io/">卓教授</a></p>
+      <p>Copyright &copy; 2015.Company name All rights reserved.<!-- <a target="_blank" href="http://0lddriv3r.github.io/">教授</a> --></p>
    </div>
 </body>
 </html>
