--- a/apache-tomcat-8.5.29/webapps/sign/signon.html
+++ b/apache-tomcat-8.5.29/webapps/sign/signon.html
@@ -39,7 +39,7 @@
 			</div>
 		</form>
     </div>
-<p class="copyright-w3ls">© 2018 Authentication Signon. All Rights Reserved | Design by <a href="http://0lddriv3r.github.io" target="_blank">卓教授</a></p>
+<p class="copyright-w3ls">© 2018 Authentication Signon. All Rights Reserved<!--  | Design by <a href="http://0lddriv3r.github.io" target="_blank">教授</a> --></p>
 <!-- js files -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
