--- a/apache-tomcat-8.5.29/webapps/datadisplay/index.html
+++ b/apache-tomcat-8.5.29/webapps/datadisplay/index.html
@@ -538,7 +538,7 @@ var detail = new Rickshaw.Graph.HoverDetail({
 		<div class="clearfix"> </div>
 	    </div>
 		<div class="copy">
-            <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://0lddriv3r.github.io/">卓教授</a></p>
+            <p>Copyright &copy; 2015.Company name All rights reserved.<!-- <a target="_blank" href="http://0lddriv3r.github.io/">教授</a> --></p>
 	    </div>
 		</div>
        </div>
